--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -1,7 +1,7 @@
-{% extends'main.html' %}
+{% extends 'main.html' %}
 
 {%block content%}
 
- <h2>{room.name}/h2> 
+ <h2>{{room.name}}</h2> 
 
  {%endblock%}
